--- a/package.json
+++ b/package.json
@@ -21,6 +21,16 @@
     "typescript": "~3.7.2"
   },
   "dependencies": {
+    "@aws-cdk/aws-autoscaling": "^1.18.0",
+    "@aws-cdk/aws-codebuild": "^1.18.0",
+    "@aws-cdk/aws-codecommit": "^1.18.0",
+    "@aws-cdk/aws-codedeploy": "^1.18.0",
+    "@aws-cdk/aws-codepipeline": "^1.18.0",
+    "@aws-cdk/aws-codepipeline-actions": "^1.18.0",
+    "@aws-cdk/aws-ec2": "^1.18.0",
+    "@aws-cdk/aws-elasticloadbalancingv2": "^1.18.0",
+    "@aws-cdk/aws-elasticloadbalancingv2-targets": "^1.18.0",
+    "@aws-cdk/aws-iam": "^1.18.0",
     "@aws-cdk/core": "^1.18.0",
     "source-map-support": "^0.5.16"
   }
